Fix setting scrollBar

--- a/assets/css/prospero.css
+++ b/assets/css/prospero.css
@@ -51,7 +51,7 @@ a:hover{    color: var(--color_1);;    text-decoration: none; }
 .bold{ font-family: var(--font_2); }
 /* adjust layout */ 
 .main_content{ background: var(--color_7); padding: 10px; height: 100%; overflow-x: hidden; overflow-y: auto; }
-.screenHeight.col{  max-height: 100%; height: calc(85vh - var(--gutter_unit) * 2);  overflow: auto; display: flex; flex-direction: column; justify-content: flex-start; overflow: hidden; }
+.screenHeight.col{  max-height: 100%;  height: calc(85vh - var(--gutter_unit) * 2);  overflow-x: hidden; overflow-y: scroll ; display: flex; flex-direction: column; justify-content: flex-start; }
 
 .w2ui-layout > div .w2ui-panel .w2ui-panel-content { padding: calc(var(--gutter_unit) * 0.5) ; background: none!important; }
 .w2ui-layout > div .w2ui-panel .w2ui-panel-content .w2ui-panel-content {  padding: 0; }
@@ -172,8 +172,9 @@ tr:last-child td { border: none!important; }
 .main_container{ width: 100%;  height: 100vh; overflow:hidden; display: flex; flex-direction: column;}
 
 .main_header{ padding: calc(var(--gutter_unit) * 2) calc(var(--gutter_unit) * 3); height:120px; min-height: 15vh;  align-items: center;  justify-content: flex-start;  border-bottom:1px solid var(--color_4); position: relative; display: flex;  }
-.main_header .main_header_left{   width: 100%; height: auto; min-height: 84px;  display: flex;  flex-direction: column;  justify-content: space-between; }
-.main_header .main_header_left h2{ padding-right: 120px; }
+.main_header .main_header_left{   width: 100%; font-size: calc( var(--fontSize_unit) *1.4 );  height: auto; min-height: 84px;  display: flex;  flex-direction: column;  justify-content: space-between; }
+.main_header .main_header_left h2{ padding-right: 120px;  font-size: calc( var(--fontSize_unit) *1.4 );  }
+
 .main_header .search_container{ height: 60%; text-align: left; display: flex; flex-direction: column; justify-content: space-around; }
 .main_header .search_form{ border-radius: 3em; background: var(--color_6); width: 16em; display: flex; }
 .main_header .search_form .search_input{ color: var(--color_3); outline: none; border: none; padding: 0.3em 0 0 1.5em ; background: none; width: 16em; }
